# solar-eclipse

./: README.Making_SOLAR_Eclipse
cuda_fphi/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
cuda_fphi/include/: H5config.h  H5pubconf.h  cudaVDPAU.h  cudafphi.cuh  nvToolsExt.h  nvToolsExtCuda.h  nvToolsExtCudaRt.h  nvToolsExtMeta.h  nvToolsExtSync.h
cuda_fphi/src/: cuda_fphi_main.cc  write_to_hdf5.cc
cudafphi/: .cproject  .project  CMakeLists.txt~  INSTALL.txt  Makefile  README.md  call_cudafPHI.cu  call_cudafphi.cu  cmake_install.cmake  compute_F.cu  compute_h2.cu  compute_pval.cu  cuda_fphi_main.cc  cudafPHI.cu  cudafPHI.cuh  cudafphi.cu  cudafphi_device_functions.cu  makefile  subdir.mk
extras/: arrangeps.py  stringplotk
fastlink-src/: Makefile  Makefile~  automodified.c  check.c  checkpointdefs.h  comgetvect.c  cominputcode.c  comlike.c  commoncode.c  commondefs.h  commondefs.h~  comnuclear.c  comrec.c  gemdefs.h  ildefs.h  iostuff.c  mldefs.h  mlgetvect.c  mlink.c  mlinputcode.c  mloldnuclear.c  moddefs.h  oldsegup.c  sexmodified.c
ibd-src/: #ibdprep.c#  .make.state  Makefile  Makefile-sparc  Makefile.sparc  allfreq.c  copybin.tcl  domcibd.sh  fallfrq.f  fgenfrq.f  getmeans.c  ibdmat.c  ibdmc.c  ibdprep.c  makeped.c  mrgibd.c  multipnt.c  relate.c  tclIndex  unknown.c
lib/: Makefile  any_list.c  any_list.h  auto.tcl  error.c  libplinkio.la  libplinkio.so.0.0.0  pipeback.c  pipeback.h  pshinit.c  safelib.c  safelib.h  solar.tcl  tcl.h  tclDecls.h  tclIntDecls.h  tclPlatDecls.h  testcrc.c  tk.h  tkDecls.h  tkPlatDecls.h
(+372 files in other folders)
